// Vitest Snapshot v1

exports[`pnpm parse > should parse a pnpm lockfile 1`] = `
{
  "dependencies": undefined,
  "importers": {
    ".": {
      "dependencies": {
        "tslib": "2.5.0",
      },
      "dependenciesMeta": undefined,
      "publishDirectory": undefined,
      "specifiers": {
        "tslib": "^2.5.0",
      },
    },
  },
  "lockfileVersion": 5.4,
  "packages": {
    "/tslib/2.5.0": {
      "dev": false,
      "resolution": {
        "integrity": "sha512-336iVw3rtn2BUK7ORdIAHTyxHGRIHVReokCR3XjbckJMK7ms8FysBfhLR8IXnAgy7T0PTPNBWKiH514FOW/WSg==",
      },
    },
  },
  "specifiers": undefined,
}
`;

exports[`pnpm toCommonLockfile > should convert a pnpm lockfile to a common lockfile 1`] = `
{
  "commonLockVersion": 0,
  "importers": {
    ".": {
      "dependencies": {
        "tslib": "2.5.0",
      },
      "dependenciesMeta": undefined,
      "publishDirectory": undefined,
      "specifiers": {
        "tslib": "^2.5.0",
      },
    },
  },
  "lockfileType": "pnpm",
  "lockfileVersion": 5.4,
  "name": "test",
  "overrides": undefined,
  "packages": {
    "/tslib/2.5.0": {
      "author": "Microsoft Corp.",
      "cpu": undefined,
      "dependencies": undefined,
      "dev": false,
      "engines": undefined,
      "hasBin": undefined,
      "licenseFile": "./node_modules/.pnpm/tslib@2.5.0/node_modules/tslib/LICENSE.txt",
      "optional": undefined,
      "optionalDependencies": undefined,
      "optionalPeerDependencies": [],
      "os": undefined,
      "packageJsonPath": "./node_modules/.pnpm/tslib@2.5.0/node_modules/tslib",
      "patched": undefined,
      "peerDependencies": undefined,
      "requiresBuild": undefined,
      "resolution": {
        "integrity": "sha512-336iVw3rtn2BUK7ORdIAHTyxHGRIHVReokCR3XjbckJMK7ms8FysBfhLR8IXnAgy7T0PTPNBWKiH514FOW/WSg==",
      },
      "spdxLicenseId": "0BSD",
      "version": undefined,
    },
  },
  "path": undefined,
  "version": "1.0.0",
}
`;
